' Generated by UML Generator
' Encoded: TLR9Rjim4BtxAtXa6XlesMY394wB6B2BD2dG5aKFj3Hs1g58bKiQDyY_bwH8YLfyiJNac-tD8brgmvIn5P_f9nGrKwmY1MTQNncZS6SDh0if7l0VaFUpHoo15AWA3hDPG94LHn26lCu8MJnARPRamUc9WvThgPoCmdZ1O0NIcYroZhezNRYVyyO6pTNdf5MUax7gcLVJ8Cfx-6D16wgQ_oM91sV-ITTIQF1kD2Xat2Kn1TmT3VpwxM4bTC2I6PRkScjl_SolwZeaV_xgY3HOl96AeQ1C7NJA9UW_Ioo7kYjPLKoKTqmvjms5HNFaTBUi_f2uYC1lnneko4SYu2-vPVhHGowevsB1sUwxL4zhKLjp3wm4jIIRqPb7HWAkBVA0kk_9qNh_i76HbQeNUBWzFu0P-wDd9wBmy6Y4Fi4nCUNWMQfDZStc-pfQQv-ch2QEdLBjuqhc8wCzotDYNU11kLUac7PNfy_8OOC20hIfa8eHNDlz7XIK7RE1e9u6dGO7mloL1z9QoQes6GLnWDeWnhccNX5QSd1a97zj51Eb6AC7TSkArVaUT4Vez9qN4g-UpW6thlTjvRfaIQxYqxgSazYXhOyfkXyAXRNvz0A5DJ9b6Jfk6KSch9NGTikf8VBNh33u38qfFuDWuXpbe-DFBxA-xdkcVQTk6Prs6LY4e1YTqhthWI-iWgoc_V4Fz4SUcYnvAigWcgc1_E6Wqt8ZT4e_H5QYPZiEjwXTNaUQJGc84nVebNtyj0AjsG76lPbGMnHOCNudtKwUG3TBle6kf5Gb2cP0_mYj9ZCxtULFUbgFXltGYYta3fIMWl6lrgrkWw2tx0KhMtdyZRGkonPwW_iz5fQRa74dPG1TOEtfR019cW04YiQST80D5COgk9LMwL7A6Opjz4fQns1CtVN9r0lYtM8njKrFGVkZEnlCbaV4aJfvqn-jI_UwTTy9_m4
' URL: http://www.plantuml.com/plantuml/uml/TLR9Rjim4BtxAtXa6XlesMY394wB6B2BD2dG5aKFj3Hs1g58bKiQDyY_bwH8YLfyiJNac-tD8brgmvIn5P_f9nGrKwmY1MTQNncZS6SDh0if7l0VaFUpHoo15AWA3hDPG94LHn26lCu8MJnARPRamUc9WvThgPoCmdZ1O0NIcYroZhezNRYVyyO6pTNdf5MUax7gcLVJ8Cfx-6D16wgQ_oM91sV-ITTIQF1kD2Xat2Kn1TmT3VpwxM4bTC2I6PRkScjl_SolwZeaV_xgY3HOl96AeQ1C7NJA9UW_Ioo7kYjPLKoKTqmvjms5HNFaTBUi_f2uYC1lnneko4SYu2-vPVhHGowevsB1sUwxL4zhKLjp3wm4jIIRqPb7HWAkBVA0kk_9qNh_i76HbQeNUBWzFu0P-wDd9wBmy6Y4Fi4nCUNWMQfDZStc-pfQQv-ch2QEdLBjuqhc8wCzotDYNU11kLUac7PNfy_8OOC20hIfa8eHNDlz7XIK7RE1e9u6dGO7mloL1z9QoQes6GLnWDeWnhccNX5QSd1a97zj51Eb6AC7TSkArVaUT4Vez9qN4g-UpW6thlTjvRfaIQxYqxgSazYXhOyfkXyAXRNvz0A5DJ9b6Jfk6KSch9NGTikf8VBNh33u38qfFuDWuXpbe-DFBxA-xdkcVQTk6Prs6LY4e1YTqhthWI-iWgoc_V4Fz4SUcYnvAigWcgc1_E6Wqt8ZT4e_H5QYPZiEjwXTNaUQJGc84nVebNtyj0AjsG76lPbGMnHOCNudtKwUG3TBle6kf5Gb2cP0_mYj9ZCxtULFUbgFXltGYYta3fIMWl6lrgrkWw2tx0KhMtdyZRGkonPwW_iz5fQRa74dPG1TOEtfR019cW04YiQST80D5COgk9LMwL7A6Opjz4fQns1CtVN9r0lYtM8njKrFGVkZEnlCbaV4aJfvqn-jI_UwTTy9_m4
' Generated on: 2026-04-04T13:57:18.663669200

@startuml
skinparam classAttributeIconSize 0
hide circle

class Client {
  -host: String
  -port: int
  -timeoutMillis: int
  --
  +Client(host: String, port: int, timeoutMillis: int)
  +sendRequest(request: Request): Response
  -serialize(request: Request): byte[]
  -deserialize(data: byte[]): Response
}

class ClientApp {
  +{static} main(args: String[]): void
}

class ClientCommandParser {
  -commands: Map<String, CommandType> = new HashMap<>()
  -labWorkInputReader: LabWorkInputReader
  -requestBuilder: RequestBuilder = new RequestBuilder()
  --
  +ClientCommandParser()
  +getLabWorkInputReader(): LabWorkInputReader
  +getCommand(key: String): CommandType
  +setLWIReader(LWIReader: LabWorkInputReader): void
  +parseCommand(command: CommandType, userInput: String[]): Request
}

class FileLineInput {
  -reader: BufferedReader
  --
  +FileLineInput(reader: BufferedReader)
  +readLine(prompt: String): String
}

class LabWorkInputReader {
  -console: LineInput
  --
  +LabWorkInputReader(console: LineInput)
  +getLabWork(): LabWork
}

class RequestBuilder {
  +build(commandType: CommandType, argument: ArgumentId, labWork: LabWork): Request
}

class ScriptExecutor {
  -client: Client
  -parser: ClientCommandParser
  -activeScripts: Set<String> = new HashSet<>()
  --
  +ScriptExecutor(client: Client, parser: ClientCommandParser)
  +executeScript(fileName: String): void
}

class InputLabWork {
  -lineInput: LineInput
  -reader: LineReader
  --
  +InputLabWork(lineInput: LineInput)
  +disableHistory(): void
  +enableHistory(): void
  +inputName(message: String): String
  +inputMinimalPoint(message: String): int
  +inputCoordinatesX(): Long
  +inputCoordinateY(): int
  +inputCoordinates(): Coordinates
  +inputPersonalQualitiesMaximum(): Double
  +inputDifficulty(): Difficulty
  +inputDiscipline(): Discipline
  +inputDisciplineName(): String
  +inputDisciplineLectureHours(): Long
  +inputDisciplineLabsCount(): int
}

ClientCommandParser *-- LabWorkInputReader
ClientCommandParser *-- RequestBuilder
ScriptExecutor *-- Client
ScriptExecutor *-- ClientCommandParser
@enduml